[metadata]
name = browserTools
version = 0.0.1
author = Yuta Nakamura
author_email = nakamurayuta0204@gmail.com
description = Automation Tools Using Browsers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonyuta0204/browser-tools
project_urls =
    Bug Tracker = https://github.com/bonyuta0204/browser-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    selenium
    typer

[options.entry_points]
console_scripts =
        browser-tools = browser_tools.cli:app

[options.packages.find]
where = .
